Correct unit tests flaws.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
@@ -108,6 +108,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentHeader.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentPluginConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/MissingBindVariableException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
