--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/StringTokenizerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/StringTokenizerTest.html
@@ -18,6 +18,7 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
     
 	<script type="text/javascript" src="../../Source/FundamentalTypes/Assertion.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
