--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.html
@@ -12,6 +12,7 @@
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.5-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
+   <script type="text/javascript" src="../../Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
