--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentPluginTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentPluginTest.html
@@ -82,6 +82,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentPluginConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script>
