--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SplashForm/SplashFormTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SplashForm/SplashFormTest.html
@@ -18,6 +18,10 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
+   <script type="text/javascript"  src="../../Source/FundamentalTypes/WebUIException.js"></script>
+
+   <script type="text/javascript"  src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
+   <script type="text/javascript"  src="../../Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript"  src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/SplashForm/SplashForm.js" charset="utf-8"></script>
