--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
@@ -23,6 +23,7 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    
    <script type="text/javascript" src="../../Source/ComponentStateManager/StateTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateTransformer.js"></script>
