--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
@@ -74,6 +74,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentHeader.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentPluginConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/ComplexContentBehaviour.js"></script>
