--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/ResourceUriTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/ResourceUriTest.html
@@ -21,6 +21,8 @@
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
     
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
+   
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
