--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementTest.html
@@ -73,10 +73,12 @@
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentPluginConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script>
