--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
@@ -78,6 +78,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
@@ -89,6 +90,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentHeader.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentPluginConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/MissingBindVariableException.js"></script>
