Correct DiagramWidget's xml selectors, use namespace prefix.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -55,6 +55,7 @@
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigureFactory.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/Diagram.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AnnotationFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AttributeFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ClassFigure.js"></script>
