--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerDisplayTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerDisplayTest.html
@@ -45,6 +45,8 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/ShortCutKey.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetAction.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructionException.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
@@ -61,6 +63,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/RemoteStyleSheet.js"></script>  
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
@@ -72,12 +75,19 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/Media.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaControllerButton.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaBackwardButton.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaBeginningButton.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaEndButton.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaForwardButton.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerController.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerDisplay.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerScreen.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerThumbnailsBar.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerThumbnail.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerTitleBar.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerWidget.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaStartStopButton.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/Media.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/SlideShow/Slideshow.js"></script>
    <script type="text/javascript" src="../../Source/ToolBarWidget/ToolBarButton.js"></script>
