--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/Slideshow/SlideshowTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/Slideshow/SlideshowTest.html
@@ -7,16 +7,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
 
    <link rel="stylesheet" type="text/css" href="../../../JsUnit/css/jsUnitStyle.css">
-   <link rel="stylesheet" type="text/css" href="../../../PhotoGaleryWidget/PhotoGalery.css">
+   <link rel="stylesheet" type="text/css" href="../../MediaPlayerWidget/PhotoGalery.css">
    
    <script type="text/javascript">
       var contextRootPrefix = "../../../../";
    </script>
    
-   <script type="text/javascript" src="../../../../Libraries/JsHamcrest/jshamcrest.js"></script>
-   <script type="text/javascript" src="../../../../JsUnit/JsMockito/JsMockito.js"></script>
-   <script type="text/javascript" src="../../../../Libraries/Log4JavaScript/log4javascript.js"></script>
-   <script type="text/javascript" src="../../../../Libraries/MooTools/mootools-core-1.4.5-full-compat.js"></script>
+   <script type="text/javascript" src="../../../Libraries/JsHamcrest/jshamcrest.js"></script>
+   <script type="text/javascript" src="../../../JsUnit/JsMockito/JsMockito.js"></script>
+   <script type="text/javascript" src="../../../Libraries/Log4JavaScript/log4javascript.js"></script>
+   <script type="text/javascript" src="../../../Libraries/MooTools/mootools-core-1.4.5-full-compat.js"></script>
    <script type="text/javascript" src="../../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../../JsUnit/app/JsTestCase.js"></script>
