Make SlideShow tests to pass.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTest.html
@@ -89,6 +89,7 @@
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaPlayerWidget.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/MediaStartStopButton.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/Media.js"></script>
+   <script type="text/javascript" src="../../Source/MediaPlayerWidget/SlideShow/Slide.js"></script>
    <script type="text/javascript" src="../../Source/MediaPlayerWidget/SlideShow/SlideShow.js"></script>
    <script type="text/javascript" src="../../Source/ToolBarWidget/ToolBarButton.js"></script>
    <script type="text/javascript" src="../../Source/ToolBarWidget/ToolBarWidget.js"></script>
