--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTestSuite.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-   <h1>PhotoGaleryWidget Test Suite</h1>
+   <h1>MediaPlayerWidget Test Suite</h1>
 
-   <p>This page contains a suite of tests for 'PhotoGaleryWidget' testing.</p>
+   <p>This page contains a suite of tests for 'MediaPlayerWidget' testing.</p>
 </body>
 </html>
