--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -30,6 +30,7 @@
          newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/PartyEventWidget/PartyEventWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/MediaPlayerWidget/SlideShow/SlideShowTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
          newsuite.addTestPage("../ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
