Add asynchron behaviour to MediaPlayerThumbnailsBar.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTest.html
@@ -103,7 +103,7 @@
    
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         //runTestMethod();
+         runTestMethod();
       });
 
       JsHamcrest.Integration.JsUnit();
