Correct MediaPlayerWidget related configuration flaws in ProcessPuzzleUI prototype application.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -44,6 +44,8 @@
    <script type="text/javascript" src="JavaScript/Source/WebUIMessageBus/WebUIMessage.js"></script>
     
    <script type="text/javascript" src="JavaScript/Source/AbstractDocument/AbstractDocument.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/BrowserWidget/ShortCutKey.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetAction.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetConstructionException.js"></script> 
