Add OperationFigure to ClassFigure.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -64,6 +64,7 @@
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/OperationFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementConstructionException.js"></script>
