--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -60,6 +60,7 @@
    <script type="text/javascript" src="../../Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramWidget.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/OperationFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/UnknownDiagramElementException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
