--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -59,6 +59,7 @@
    <script type="text/javascript" src="../../Source/DiagramWidget/ClassFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramWidget.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/AssociationConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/OperationFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/UnknownDiagramElementException.js"></script>
@@ -89,12 +90,13 @@
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessageBus.js"></script>
 
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramFigureTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/DiagramWidget/AssociationConnectionFigureTest.js"></script>
+<!-- 
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/AnnotationFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/ClassFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramWidgetTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/InheritanceConnectionFigureTest.js"></script>
-<!-- 
  -->
    
    <script type="text/javascript">
