--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -63,6 +63,7 @@
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ClassFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AssociationConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/OperationFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
