--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -174,6 +174,7 @@
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentStyleSheet.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ScrollingBehaviour/NoneExistingScrollableElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ScrollingBehaviour/ScrollArea.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ScrollingBehaviour/ScrollControls.js"></script>
